static/css/style.css
/* ... */
hr {
  border: none;
  border-bottom: 1px solid #ccc;
}

nav ul a,
nav .brand-logo {
  color: #444;
}

#notification-indicator.ring {
  color: #FFA726;
  animation: ring 8s 1s ease-in-out;
}

.code {
  font-family: monospace;
}

p {
  line-height: 2rem;
}

form .input-field img {
  max-height: 200px;
}

.button-collapse {
  color: #26a69a;
}

.parallax-container {
  height: 200px;
}
.parallax-container .section {
  width: 100%;
}

@media only screen and (max-width : 992px) {
  .parallax-container .section {
    position: absolute;
    top: 40%;
  }
  #index-banner .section {
    top: 10%;
  }
}

@media only screen and (max-width : 600px) {
  #index-banner .section {
    top: 0;
  }
}

.icon-block {
  padding: 0 15px;
}
.icon-block .material-icons {
  font-size: inherit;
}

nav {
  margin-bottom: 30px;
}
body.page-start main {
  padding-top: 0;
}


.brand-logo i {
  color: #424242;
  font-size: 1.3em;
  margin-right: 5px;
}

.title-type {
  font-size: 0.7em;
}


body.page-start footer.page-footer {
  margin: 0;
}

input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
  background-color: inherit;
  background-image: none;
  color: inherit;
}

.text-right {
  text-align: right;
}

h1.line {
  border-bottom: 1px solid #ccc;
  padding-bottom: 30px;
}

a.disabled {
  color: #9F9FA7;
  cursor: default;
}


/* Components */

.alert {
  position: absolute;
  left: 50%;
  top: 75px;
  transform: translateX(-50%);
  z-index: 50;
  background-color: white;
  font-weight: 300;
  font-size: 1.2em;
  padding: 10px;
  border-radius: 2px;
  border: 1px solid;
}

.alert i {
  line-height: 23px;
  vertical-align: middle;
}

.alert i.alert-icon {
  position: absolute;
  background-color: #388E3C;
  color: #FFF;
  padding: 7px;
  padding-top: 11px;
  line-height: 100%;
  vertical-align: middle;
  left: 0px;
  top: 0px;
  bottom: 0px;
}

.alert i.alert-hide {
  position: absolute;
  right: 10px;
  top: 12px;
  cursor: pointer;
}

.alert .message {
  margin-left: 40px;
  margin-right: 40px;
  letter-spacing: 0.5px;
}

.alert-error,
.alert-danger {
  color: #B71C1C;
}
.alert-error i.alert-icon,
.alert-danger i.alert-icon {
  background-color: #B71C1C;
}

.alert-warning {
  color: #F57C00;
}
.alert-warning i.alert-icon {
  background-color: #F57C00;
}

.alert-success {
  color: #388E3C;
}
.alert-success i.alert-icon {
  background-color: #388E3C;
}

.alert-info {
  color: #1976D2;
}
.alert-info i.alert-icon {
  background-color: #1976D2;
}

.sdf-badge {
  padding: 4px;
  font-size: 0.8rem;
  color: #fff;
  background-color: #26a69a;
  border-radius: 2px;
}

/* Twitter Bootstrap */

.collapse {
  display: none;
}
.collapse.in,
.collapsing {
  display: block;
}

/* MaterialCSS fixes */

.nav-fixed {
  position: fixed;
  width: 100%;
  z-index: 100;
}
#sidenav-overlay {
  z-index: 99;
}
.nav-fixed + main {
  margin-top: 64px;
  padding-top: 20px;
}

.collection h4 .secondary-content {
  font-size: 0.5em;
}
.collection h4 .secondary-content.btn-flat {
  padding-right: 0;
}

.collection {
  overflow: visible; /* show dropdown menu */
}

.dropdown-content li > a,
.dropdown-content li > span {
  font-size: 1rem;
  text-transform: uppercase;
}

.input-field {
  min-height: 51px;
}
.input-field label {
  left: 0;
  z-index: -1; /* react on click at input */
}
nav .input-field.search-field label {
  z-index: 0;
}
.input-field input[type="checkbox"] + label {
  z-index: 0;
}
nav .input-field.search-field label i {
  line-height: 45px;
}
.input-field input[type=search] {
  padding-left: 2.5rem;
  width: calc(100% - 2.5rem);
}
nav .input-field.search-field input[type=search] {
  color: white;
  border-bottom: 1px solid #ccc;
  line-height: 45px;
  margin-top: 10px;
  margin-bottom: 3px;
  width: 179px;
}

#nav_ul_sort {
  /* nav margin-bottom is ignored if this ul starts to float */
  margin-bottom: 30px;
  /* if this ul starts to the bgColor is needed to prevent transparent bg and overflowed elements */
  background-color: #26a69a;
  /* needs to be 100% width for better float breaks of child ul elems */
  width: 100%;

  border: 0 solid #009688;
  border-right-width: 1px;
  border-left-width: 1px;

  /* hide overflowing borders */
  overflow: hidden;
}

#nav_ul_sort > li {
  border: 1px solid #009688;
  border-right-width:0;
  padding-left: 15px;
  float:right;
}


.text-shadow {
    text-shadow: 0px 1px 2px rgba(0,0,0,0.8);
}


.btn-flat {
  color: #26a69a;
}
.btn-danger {
  background-color: #D62F2F;
}
.btn-danger:hover {
  background-color: #E84F4F;
}
.btn-flat.btn-danger {
  background-color: transparent;
  color: #D62F2F;
}

.input-field.has-error label {
  color: #B71C1C;
}
.input-field.has-error input {
  border-bottom-color: #B71C1C;
}
.input-field.has-error .help-block {
  display: inline;
  position: relative;
  top: -16px;
  color: #b71c1c;
  font-size: 0.8rem;
}

.input-field .select-wrapper + label {
  position: absolute;
  top: -14px;
  font-size: 0.8rem;
}

.select-wrapper {
  padding-bottom: 1px; /* hack for following input-field */
}

.empty {
  margin: 60px 0;
}
.empty i {
  color: #ccc;
  font-size: 15em;
  text-align: center;
  width: 100%;
}
.empty p {
  text-align: center;
  color: #ccc;
  font-size: 1.5em;
  margin-top: 0;
}

nav .profile-img {
  line-height: 64px;
  vertical-align: middle;
  width: 32px;
  margin-right: 10px;
  border: 1px solid #ccc;
  background-color: #FFF;
  padding: 2px;
}


/* Login */
.login-hint {
  border-radius: 3px;
  margin-top: 1em;
  margin-bottom: 2em;
  display: inline-block;
  padding: 20px;
  border: 1px solid #CCC;
  background-color: #F1F1F1;
}
.login-hint ul {
  margin: 10px 0px;
}
.login-hint li {
  list-style-type: disc;
  margin-left: 18px;
}


/* highlights-box */
.highlights-box-row {
  width: 100%;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: stretch;
  align-content: stretch;
}
/* ... */

